--- a/iss-front-end/src/components/index.css
+++ b/iss-front-end/src/components/index.css
@@ -2,9 +2,12 @@
   display: flex;
   justify-content: flex-start;
   padding-left: 10%;
+  padding-top:3px;
+  padding-bottom: 3px;
   max-width: 100%;
   margin: 0 auto;
-  margin-bottom: 10px;
+  margin-bottom: 3px;
+  border:1px solid gray;
 
 }
 .item button{
@@ -32,4 +35,10 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+}
+
+.container-heading{
+  width:100%;
+  display: flex;
+  justify-content: space-between;
 }
