--- a/iss-front-end/src/components/index.css
+++ b/iss-front-end/src/components/index.css
@@ -97,7 +97,9 @@ width:20%;
   display: flex;
   flex-direction: column;
 }
-
+.add-form-hidden{
+  display: none;
+}
 .add-form-update{
   display: none;
 }
