Added threshold functionality. Now a small red 'order' appears when an item hits 0.

--- a/iss-front-end/src/components/index.css
+++ b/iss-front-end/src/components/index.css
@@ -33,14 +33,12 @@ width:20%;
   display: flex;
 }
 
-.modal{
-  display: block;
-  background: black;
-  color: white;
-  font-size:16px;
-  height:100vh;
+
+.buy-alert{
+  font-size:.4em;
+  color:red;
 }
-.modal-hidden{
+.no-buy-alert{
   display: none;
 }
 
