--- a/iss-front-end/src/components/login.css
+++ b/iss-front-end/src/components/login.css
@@ -1,12 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
-.total-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width:30%;
+.login-form-container{
+  display:block;
+  width:20%;
   margin: 0 auto;
-  height: 50vh;
+  position:fixed;
+  left: 40%;
+  top:25%;
+
+}
+.form-container-wrapper{
+  padding-top:5%;
+  display: flex;
+  flex-direction: column;
+  background-color: #FDCEC6;
+  align-items: center;
+  height:100vh;
+
 }
 .login-div{
 
