--- a/iss-front-end/src/components/login.css
+++ b/iss-front-end/src/components/login.css
@@ -5,8 +5,8 @@
   width:20%;
   margin: 0 auto;
   position:fixed;
-  left: 40%;
   top:25%;
+  min-width: 300px;
 
 }
 .form-container-wrapper{
@@ -15,6 +15,7 @@
   flex-direction: column;
   background-color: #FDCEC6;
   align-items: center;
+  justify-content: center;
   height:100vh;
 
 }
