--- a/iss-front-end/src/components/login.css
+++ b/iss-front-end/src/components/login.css
@@ -41,11 +41,13 @@
   font-family: 'Open Sans', sans-serif;
   margin-bottom: 10px;
   background: white;
+  cursor: pointer;
 }
 
 .text-input{
   font-size: 16px;
   padding-left: 2%;
+  cursor: pointer;
 }
 
 .form-input{
