--- a/iss-front-end/src/components/NavBar.css
+++ b/iss-front-end/src/components/NavBar.css
@@ -25,3 +25,7 @@ nav .link-wrapper a {
 	font-size: 1.4rem;
 	margin: 5px 20px;
 }
+
+nav .link-wrapper a:hover {
+	border-bottom: 1px solid #ef5e4a;
+}
