--- a/iss-front-end/src/components/shoppingList.css
+++ b/iss-front-end/src/components/shoppingList.css
@@ -1,87 +1,86 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://fonts.googleapis.com/css?family=Roboto");
 
-.svg{
-  fill:white;
+.svg {
+	fill: white;
 }
-.shopping-list{
-  display: block;
-  margin: 0 auto;
-  background:rgba(239,94,74, .97);
-  color: white;
-  font-size:20px;
-  top:5%;
-  height:90vh;
-  width:40%;
-  left:30%;
-  border-radius: 10px;
-  position: fixed;
-
-}
-
-.shopping-list-hidden{
-  display: none;
+.shopping-list {
+	display: block;
+	margin: 0 auto;
+	/* background: rgba(239, 94, 74, 0.97); */
+	background: #ffab97;
+	border: 4px solid #1f262c;
+	color: white;
+	font-size: 20px;
+	top: 5%;
+	height: 90vh;
+	width: 40%;
+	left: 30%;
+	border-radius: 10px;
+	position: fixed;
 }
 
-.list-header{
-  width:90%;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.shopping-list-hidden {
+	display: none;
 }
 
-.list-header h1{
-  font-family: 'Open Sans';
-  font-weight:bold;
+.list-header {
+	width: 90%;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #1f262c;
 }
 
-.list-top{
-  width:95%;
-  margin: 0 auto;
-  display: flex;
-  justify-content: flex-end;
+.list-header h1 {
+	font-family: "Open Sans";
+	font-weight: bold;
 }
 
-.close-list{
-
-  background-image: url("../assets/x-icon.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  height:50px;
-  width:10%;
-  padding-top: 5px;
-  font-size:36px;
-  font-weight: 600;
-
-}
-.list-element{
-  width:80%;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-.listed-item{
-  width:80%;
-  display: flex;
-  font-size:28px;
-  margin-top:10px;
-
-
+.list-top {
+	width: 95%;
+	margin: 0 auto;
+	display: flex;
+	justify-content: flex-end;
 }
 
-.index{
-  margin-right:2%;
+.close-list {
+	background-image: url("../assets/x-icon.svg");
+	background-repeat: no-repeat;
+	background-size: contain;
+	height: 50px;
+	width: 10%;
+	padding-top: 5px;
+	font-size: 36px;
+	font-weight: 600;
+	cursor: pointer;
+}
+.list-element {
+	width: 80%;
+	margin: 0 auto;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+}
+.listed-item {
+	width: 80%;
+	display: flex;
+	font-size: 28px;
+	margin-top: 10px;
 }
 
-.remove-item{
-  background-image: url("../assets/x-icon.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  height:30px;
-  width:5%;
-  margin-top:13px;
-  margin-right:2%;
-  font-size:36px;
-  font-weight: 600;
+.index {
+	margin-right: 2%;
+}
+
+.remove-item {
+	background-image: url("../assets/x-icon.svg");
+	background-repeat: no-repeat;
+	background-size: contain;
+	height: 30px;
+	width: 5%;
+	margin-top: 13px;
+	margin-right: 2%;
+	font-size: 36px;
+	font-weight: 600;
 }
