--- a/iss-front-end/src/components/volunteersLogin.css
+++ b/iss-front-end/src/components/volunteersLogin.css
@@ -4,6 +4,7 @@
 	background: #ffab97;
 	border: 4px solid #1f262c;
 	width: 40%;
+	min-height: 400px;
 	left: 30%;
 	border-radius: 10px;
 	margin: 40px auto;
@@ -11,7 +12,7 @@
 }
 
 .volunteer-form-container h2 {
-	/* width: 100%; */
+	width: 100%;
 	text-align: center;
 	justify-self: center;
 }
@@ -54,8 +55,4 @@
 	border: 0;
 	border-radius: 4px;
 	cursor: pointer;
-}
-
-.volunteer-form-container .button-wrapper .button:hover {
-	background-color: #52595f;
 }
