--- a/iss-front-end/src/components/login.css
+++ b/iss-front-end/src/components/login.css
@@ -3,25 +3,21 @@
 .login-form-container{
   display:block;
   width:20%;
-  margin: 0 auto;
-  position:fixed;
-  top:25%;
+  margin: 50px auto;
   min-width: 300px;
 
 }
 
 .form-container-wrapper{
-  padding-top:5%;
   display: flex;
   flex-direction: column;
   background-color: #fcfcfc;
   align-items: center;
   justify-content: center;
-  height:100vh;
 
 }
-.login-div{
 
+.login-div{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
