--- a/iss-front-end/src/components/locationFinder.css
+++ b/iss-front-end/src/components/locationFinder.css
@@ -1,6 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 #us-map{
-   margin-top:100px;
+   margin-top:40px;
 }
 .state {fill:#EF5E4A;}
 
@@ -16,4 +17,13 @@ path:hover, circle:hover {
   width:100%;
   background-color: #2e3842;
   height:100vh
+}
+h1{
+  font-size:50px;
+  padding-top:30px;
+
+  margin-top: 0;
+
+  color:white;
+  font-family: 'Open Sans'
 }
