--- a/iss-front-end/src/components/NavBar.css
+++ b/iss-front-end/src/components/NavBar.css
@@ -10,6 +10,14 @@ nav {
 
 nav img {
 	justify-self: flex-start;
+	border: 2px solid #1f262c;
+	border-radius: 50%;
+	padding: 2px 10px;
+}
+
+nav img:hover {
+	border-left: 2px solid #ef5e4a;
+	border-right: 2px solid #ef5e4a;
 }
 
 nav .link-wrapper {
